--- a/templates/includes/_header.html.twig
+++ b/templates/includes/_header.html.twig
@@ -34,6 +34,9 @@
                 <li><a class="nav-link" href="{{path('dashboard')}}">Dashboard</a></li>
                 <!--<a class="nav-link" href="{{path('statistics')}}">Statistics</a>-->
                 <!--<a class="nav-link" href="">Maintenance</a>-->
+                {% if is_granted('ROLE_ADMIN') %}
+                <li><a class="nav-link" href="{{path('app_sn')}}">SN</a></li>
+                {% endif %}
             </ul>
 
             
