--- a/templates/includes/_header.html.twig
+++ b/templates/includes/_header.html.twig
@@ -31,7 +31,10 @@
                 -->
                 <li><a class="nav-link" href="{{path('software')}}">Software</a></li>
                 <li><a class="nav-link" href="{{path('device')}}">Device</a></li>
+                {% if is_granted("ROLE_ADMIN") %}
                 <li><a class="nav-link" href="{{path('dashboard')}}">Dashboard</a></li>
+                {% endif %}
+                
                 <!--<a class="nav-link" href="{{path('statistics')}}">Statistics</a>-->
                 <!--<a class="nav-link" href="">Maintenance</a>-->
             </ul>
