--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -172,11 +172,12 @@ a {
   width: 100%;
 }
 
+/*
 #screenDevice {
-  visibility: hidden;
-  display: none;
+    visibility: hidden;
+    display: none;
 }
-
+*/
 /*
 #testAcces {
     visibility: hidden;
