--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -211,11 +211,12 @@ a {
     padding: 0 1em;
     width: 100%;
 }
-
+/*
 #screenDevice {
     visibility: hidden;
     display: none;
 }
+*/
 /*
 #testAcces {
     visibility: hidden;
