--- a/templates/device/acces_modals.html.twig
+++ b/templates/device/acces_modals.html.twig
@@ -1,43 +1,38 @@
 <!-- ===== ACCESS MODALS ===== -->
-<div class="modal fade testAcces px-4" id="testAcces" data-sn="1234" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" data-bs-backdrop="static" data-bs-keyboard="false">
+
+<div class="modal fade testAcces px-4" id="testAcces_{{device.id}}" data-sn="{{device.id}}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" data-bs-backdrop="static" data-bs-keyboard="false">
     <div class="modal-dialog">
         <div class="modal-content">
         <div class="modal-header">
-            <h5 class="modal-title" id="deviceSn"></h5>
+            <h5 class="modal-title" id="deviceSn">{{device.sn}}</h5>
             <!--<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>-->
         </div>
         <div class="modal-body">
-            <div class="mb-2">
-                <h1 id="deviceSn"><h1>
-                
-
-            </div>
             <fieldset class="mb-2">
                 <legend>Test Touch</legend>
                         <div class="form-outline mb-2">
                             <label for="pageSlide" class="form-label">Page: </label>
                             <div class="input-group">
-                                <input class="btn btn-outline-secondary connect_command" type="button" id='i_infoPageLess_sn_1234' name="pageSlide" value="-">
-                                <span class="input-group-text" id="pageInfoNumber">0</span>
-                                <input class="btn btn-outline-secondary connect_command" type="button" id="i_infoPagePlus_sn_1234" name="pageSlide" value="+">
+                                <input data-sn="{{device.sn}}" data-id="{{device.id}}" class="btn btn-outline-secondary page_button" type="button" id='i_infoPageLess_sn_1234' name="pageSlide" value="-">
+                                <span class="input-group-text" id="pageInfoNumber_{{device.id}}">0</span>
+                                <input data-sn="{{device.sn}}" data-id="{{device.id}}" class="btn btn-outline-secondary page_button" type="button" id="i_infoPagePlus_sn_1234" name="pageSlide" value="+">
                             </div>
                         </div>
             </fieldset>
             <fieldset class="mb-2">
                 <legend>Test Command</legend>
                 <div class="input-group">
-                
-                    <input class="form-control connect_command" type="text" id="u_cmdStringTest_sn_1234" name="cmdString" value="" placeholder="Command String">
-                    <input class="btn btn-outline-dark connect_command" type="button" id="u_cmdTest_sn_1234" name="cmdTest" value="Send">
+                    <input data-sn="{{device.sn}}" class="form-control" type="text" id="u_cmdStringTest_sn_1234" name="cmdString" value="" placeholder="Command String" required>
+                    <input data-id="{{device.id}}" class="btn btn-outline-dark submit_command_button" type="button" id="u_cmdTest_sn_1234" name="cmdTest" value="Send">
                 </div>
             </fieldset>
             <fieldset class="mb-2">
                 <legend>Device Information</legend>
-                <table id="infoList">
+                <table id="infoList_{{device.id}}">
                     
                 </table>
             </fieldset>
-            <input class="btn btn-outline-dark connect_command" type="button" id="q_disconnect_sn_1234" name='1234' value="Disconnect" data-bs-dismiss="modal">
+            <input class="btn btn-outline-dark disconnect_button" type="button" id="q_disconnect_sn_1234" name='1234' value="Disconnect" data-bs-dismiss="modal">
         </div>
         <div class="modal-footer">
             <!--
@@ -48,3 +43,8 @@
         </div>
     </div>
 </div>
+<!-- ===== DEVICE ACTION ===== -->
+{% include 'device/device_action.html.twig' %}
+
+
+
