--- a/templates/device/info_modals.html.twig
+++ b/templates/device/info_modals.html.twig
@@ -65,16 +65,24 @@
                                 <div class="{{(device.isActive)? 'device-active': 'device-inactive'}}">{{(device.isActive)? 'Active':'Inactive'}}</div>
                             </td>
                         </tr>
-                        {% if is_granted("ROLE_ADMIN") %}
+                        {% if is_granted("ROLE_SUPER_ADMIN") %}
                         <tr class="text-center">
                             <th>Connect :</th>
                             <td>
                                 {% if (device.deviceFamily == "BIOBACK" or device.deviceFamily == "RSHOCK" or device.deviceFamily == "CRYOBACK4") %}
-                                    <input class="btn bg-green btn-outline-green connect_command" 
+                                    
+                                    <input class="btn bg-green btn-outline-green connect_button" 
                                     id="c_sn_{{device.sn}}" 
                                     data-id="connect_{{device.id}}" 
                                     name='{{device.sn}}' type="button" value="Connect" 
-                                    data-bs-toggle="modal" data-bs-target="#testAcces">
+                                    data-bs-toggle="modal" data-bs-target="#testAcces_{{device.id}}">
+                                    
+                                    <!--
+                                    <a href={{ path('connect', { 'id': device.id }) }} class="btn bg-green btn-outline-green connect_command" 
+                                    id="c_sn_{{device.sn}}" 
+                                    data-id="connect_{{device.id}}" 
+                                    name='{{device.sn}}' type="button" value="Connect"></a>
+                                    -->
                                 {% endif %}
                             </td>
                         </tr>
@@ -111,25 +119,6 @@
                             </td>
                         </tr>
                         
-                        {#
-                        {{ form_start(versioninfoform) }}
-                        <tr>
-                            <td>
-                            {{form_row(versioninfoform.versionUpload)}}
-                            <td>
-                        </tr>
-                        <tr>
-                            <td>
-                            {{form_row(versioninfoform.forced)}}
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <button type="submit" class="w-auto text-center btn bg-orange btn-outline-orange"><i class="fa-solid fa-check p-1"></i></button>
-                            </td>
-                        </tr>
-                        {{ form_end(versioninfoform) }}
-                        #}
                         {% endif %}
                     </tbody>
                 </table>
@@ -151,26 +140,5 @@
         </div>
     </div>
 
-    <!--
-    <div class="modal shadow-1 white falling" id="modal_forced_{{device.id}}" data-ax="modal">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                Force Device
-                <button data-target="modal_forced_{{device.id}}" class="ml-auto btn shadow-1 rounded-1 small modal-trigger mt-2 mr-2 bg-orange btn-outline-orange"><i class="fa-solid fa-xmark"></i></button>
-                </div>
-
-                <div class="modal-footer">
-                    <div>
-                        <a href="" class="btn red shadow-1 rounded-1 small">Validate</a>
-                        {#<a href="{{path('forced', {'id': device.id}, {'id': device.id})}}" class="btn red shadow-1 rounded-1 small">Validate</a>#}
-                    </div>
-                    
-                </div>
-            </div>
-        </div>
-        
-
-    </div>
-    -->
+    {% include 'device/acces_modals.html.twig' %}
 {% endfor %}
