--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -33,7 +33,7 @@
                     <!--<input type="text" value="{{ last_username }}" name="username" id="inputUsername" class="form-control" autocomplete="username" required autofocus>-->
                     <div class="input-group flex-nowrap">
                     <span class="input-group-text" id="addon-wrapping"><i class="fa-solid fa-user"></i></span>
-                    <input type="text" placeholder="Username" name="username" id="inputUsername" class="form-control" required autofocus>
+                    <input type="text" placeholder="Email" name="username" id="inputUsername" class="form-control" required autofocus>
                     </div>
                 </div>
                 <div class="form-outline mt-1 mb-2 mt-sm-2">
